etc/k8s/traefik-redirectscheme-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
