etc/k8s/administration-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: administration-service
spec:
  selector:
    matchLabels:
      app: administration-service
  replicas: 1
  template:
    metadata:
      labels:
        app: administration-service
    spec:
      containers:
        - name: administration-service
          image: ${DOCKER_IMAGE_PREFIX}/administration-service:${DOCKER_IMAGE_TAG}
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: "${DOCKER_IMAGE_SECRETNAME}"
