etc/k8s/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  selector:
    matchLabels:
      app: auth-server
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: ${DOCKER_IMAGE_PREFIX}/auth-server:${DOCKER_IMAGE_TAG}
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: "${DOCKER_IMAGE_SECRETNAME}"
