etc/k8s/contact-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service
spec:
  selector:
    matchLabels:
      app: contact-service
  replicas: 1
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      containers:
        - name: contact-service
          image: ${DOCKER_IMAGE_PREFIX}/contact-service:${DOCKER_IMAGE_TAG}
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: "${DOCKER_IMAGE_SECRETNAME}"
