etc/k8s/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
      containers:
        - name: postgresql
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dbdata
              mountPath: /var/lib/postgresql/data
