etc/k8s/report-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
spec:
  selector:
    matchLabels:
      app: report-service
  replicas: 1
  template:
    metadata:
      labels:
        app: report-service
    spec:
      containers:
        - name: report-service
          image: ${DOCKER_IMAGE_PREFIX}/report-service:${DOCKER_IMAGE_TAG}
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: "${DOCKER_IMAGE_SECRETNAME}"
