etc/k8s/web-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-gateway
spec:
  selector:
    matchLabels:
      app: web-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: web-gateway
    spec:
      containers:
        - name: web-gateway
          image: ${DOCKER_IMAGE_PREFIX}/web-gateway:${DOCKER_IMAGE_TAG}
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: "${DOCKER_IMAGE_SECRETNAME}"
