etc/k8s/auth-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - name: http
      port: 80
