etc/k8s/contact-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: contact-service
spec:
  selector:
    app: contact-service
  ports:
    - name: http
      port: 80
