etc/k8s/identity-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: identity-service
spec:
  selector:
    app: identity-service
  ports:
    - name: http
      port: 80
