etc/k8s/report-service-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: report-service
spec:
  selector:
    app: report-service
  ports:
    - name: http
      port: 80
