etc/k8s/web-gateway-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-gateway
spec:
  selector:
    app: web-gateway
  ports:
    - name: http
      port: 80
