etc/k8s/web-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
