etc/k8s/administration-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: administration-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: administration-service.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: administration-service
                port:
                  number: 80
  tls:
    - secretName: administration-service-tls
      hosts:
        - administration-service.${DEMO_DOMAIN}

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: administration-service-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-traefik-redirectscheme@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: traefik
  rules:
    - host: administration-service.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: administration-service
                port:
                  number: 80
