etc/k8s/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: rabbitmq.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
  tls:
    - secretName: rabbitmq-tls
      hosts:
        - rabbitmq.${DEMO_DOMAIN}

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: rabbitmq-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-traefik-redirectscheme@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: traefik
  rules:
    - host: rabbitmq.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
