etc/k8s/web-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: web-gateway.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-gateway
                port:
                  number: 80
  tls:
    - secretName: web-gateway-tls
      hosts:
        - web-gateway.${DEMO_DOMAIN}

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-gateway-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-traefik-redirectscheme@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  ingressClassName: traefik
  rules:
    - host: web-gateway.${DEMO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-gateway
                port:
                  number: 80
